--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 *{
     box-sizing: border-box;
+    
 }
 
 body{
@@ -22,39 +23,49 @@ div h1 {
   display: inline-block;
   margin-bottom: 0%;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
+  
 }
+
 div image{
     display: inline-block;
     left:0%;
     width: 30%;
+    padding-top:150px;
+    position: absolute;
 }
  h5 {
     
     font-weight: lighter;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 0%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
+    color: grey;
+    padding-left: 0%;
+    
 }
 .right {
     float: right;
     padding-top: 60px;
-    width: 40%;
+    width: 25%;
     margin-right: 0%; 
 }
 .left {
     float:left;
-   
+   position: relative;
     width: 50%;
     
 }
-
-main section {
-    background-color: #363336c5;
-    width: 100%;
-    height: 20px;
+.hrs{
     clear: both;
-    margin-top: 10%;
+    background: url('chocolate pizza/hr-img.png') top center;
+    
+    display: block;
+    height: 15px;
+    border: 0;
+    position: relative;
 }
+
+
 main h2{
     font-family: fantasy;
     font-weight:bolder ;
@@ -78,7 +89,7 @@ main div h6 {
 }
 #img {
     clear: both;
-    max-width: 100%;
+    min-width: 100%;
     padding:0px ;
     box-sizing: border-box;
 }
@@ -94,16 +105,18 @@ article p {
     width:100%;
    position: relative;
 }
-#img2{
-    max-width: 100%;
+#im2{
+    min-width: 100%;
     padding: 0%;
     display: inline-block;
+    margin-bottom: 40px;
 }
 
 #list1{
     position: absolute;
     top: 20%;
     left: 20%;
+
     
 }
 #list2{
@@ -113,9 +126,10 @@ article p {
     
 }
 form fieldset label {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     color: rgb(56, 46, 19);
     font-weight: lighter;
+    font-size: 20px;
     
 }
 form fieldset{
@@ -123,31 +137,56 @@ form fieldset{
 }
 .float1 {
     float:left;
-   
+   padding:0px;
+   margin-top: 0px;
     width: 50%;
+    height: auto;
 }
 .float2{
     float: right;
     padding-top: 60px;
-    width: 40%;
-    margin-right: 0%;
+    min-width: 10%;
+    right: 0%;
+    padding-right: 0px;
+    margin-right: 0px;
+    
 }
 .design {
     display: inline-block;
     width: 20%;
+    padding-top: 40px;
 }
 main div h4{
-    display: inline-block;
+    
     width: 30%;
+    margin-top: 0%;
+    margin-bottom: 10px;
+    display: inline-block;
+    padding-bottom: 0%;
+    
+}
+main div p{
+    margin:0%;
+    padding-left: 100px;
+    padding-top: 0px;
+    
 }
 button{
-    padding: 20px;
+   padding:20px;
+    background-color: indianred;
+    color: ivory;
+    
+    
 }
+
 footer{
     clear: both;
     margin-top: 20%;
+    overflow-x: scroll;
 }
 footer p {
     color: grey;
     text-align: center;
 }
+
+
